fix input width on mobile

--- a/src/css/components/form.css
+++ b/src/css/components/form.css
@@ -8,6 +8,10 @@ input[type='number'] {
     outline: none;
 }
 
+input {
+    min-width: 3.5rem;
+}
+
 textarea {
     border: 1px solid var(--color-primary);
     padding: 1rem;
